# daily_exercise

./: LICENSE  README.md
exercise/analyse_dav/: CMakeLists.txt
exercise/analyse_dav/src/: analyse_dav.cpp
exercise/bag_time_changer/: CMakeLists.txt  bag_time_changer.cpp
exercise/eigen_use/: CMakeLists.txt  eigen_use.cpp
exercise/name_format/: CMakeLists.txt
exercise/name_format/include/: ex1.h
exercise/name_format/src/: ex1.cpp
exercise/videotobag/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
exercise/videotobag/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
exercise/videotobag/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
exercise/videotobag/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
exercise/videotobag/devel/.private/videobag/: .rosinstall  _setup_util.py  setup.sh
exercise/videotobag/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
exercise/videotobag/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
exercise/videotobag/logs/videobag/: build.make.017.log.stderr
exercise/videotobag/src/videobag/: CMakeLists.txt  package.xml
exercise/videotobag/src/videobag/include/: tic_toc.h
exercise/videotobag/src/videobag/src/: main.cpp
